[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/player/KatoSpriteFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/Kato.gd" type="Script" id=2]
[ext_resource path="res://Assets/sounds/jump1.ogg" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 36.0
height = 6.75898

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 37.9684, 35.7988 )

[sub_resource type="CircleShape2D" id=6]
radius = 16.2722

[node name="Kato" type="KinematicBody2D"]
scale = Vector2( 0.761818, 0.761818 )
collision_mask = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.0629032, 0.0629032 )
frames = ExtResource( 1 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
bus = "Effects"

[node name="Wallchecker" type="RayCast2D" parent="."]
position = Vector2( 0, 12 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0.186007, 40.6921 )
collision_mask = 2

[node name="LadderChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderChecker"]
position = Vector2( 0, 16 )
shape = SubResource( 2 )

[node name="SidesChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( -2.16963, 11.9329 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2( 43.3925, -19.5266 )
shape = SubResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="LadderChecker" to="." method="_on_LadderChecker_body_entered"]
[connection signal="body_exited" from="LadderChecker" to="." method="_on_LadderChecker_body_exited"]
[connection signal="body_entered" from="SidesChecker" to="." method="_on_SidesChecker_body_entered"]
